--- a/index.html
+++ b/index.html
@@ -67,16 +67,15 @@
                     <li class="slider-item  talentBanneritem1">
                         <div class="row item-row">
                             <div class="col-md-5 item-right  fadeInRight current">
-                                <div class="item-img "> <img src="./_media/images/pro1.png" alt=""></div>
+                                <div class="item-img "> <img src="./_media/images/ART-Pi-Smart_04.png" alt=""></div>
                             </div>
                             <div class="col-md-7 item-left  fadeInDown animated" style="animation-delay:0.5s">
                                 <div class="item-content">
                                     <h2 class="item-title">
-                                        <span>ART-Pi 应势而生</span>
+                                        <span>ART-Pi Smart 微内核</span>
                                         <div class="item-line"></div>
                                     </h2>
-                                    <p class="item-tip maxwidth-500">ART-Pi 是 RT-Thread
-                                        团队经过半年的精心准备，专门为嵌入式软件工程师、开源创客设计的一款极具扩展功能的 DIY 开源硬件。</p>
+                                    <p class="item-tip maxwidth-500">ART-Pi Smart 开发板是RT-Thread联合百问科技出品，用于学习和评估RT-Thread Smart微内核操作系统。</p>
                                 </div>
                             </div>
                         </div>
@@ -134,7 +133,7 @@
             </div>
             <div class="row">
                 <div class="col-md-4 productVMlddle">
-                    <div> <img src="./_media/images/pro1.png " alt=" "></div>
+                    <div> <img src="./_media/images/ART-Pi-Smart_04.png " alt=" "></div>
                 </div>
                 <div class="col-md-8">
                     <div>
@@ -142,24 +141,23 @@
                             <ul class="col-md-4">
                                 <h2>板载资源:</h2>
                                 <hr>
-                                <li>- STM32H750XBH6 </li>
-                                <li>- On-board ST-LINK/V2.1</li>
-                                <li>- USB OTG with Type-C connector</li>
+                                <li>- i.MX6ULL, Cortex-A7, 800MHz  </li>
+                                <li>- DDR3 SDRAM  512MB, EMMC(4GB)</li>
+                                <li>- RW007 WiFi</li>
                                 <li>- SDIO TF Card slot </li>
-                                <li>- SDIO WIFI:AP6212</li>
-                                <li>- HDC UART BuleTooth:AP6212</li>
+                                <li>- USB Host </li>
+                                <li>- USB OTG with Type-C </li>
+                                <li>- Ethernet port x1</li>
+                                <li>- USB UART x1</li>
                                 <li>- RGB888 FPC connector</li>
-                                <li>- 32-Mbytes SDRAM</li>
-                                <li>- 16-Mbytes SPI FLASH</li>
-                                <li>- 8-Mbytes QSPI FLASH</li>
-                                <li>- D1(blue) for 3.3 v power-on</li>
-                                <li>- Two user LEDs:D2 (blue),D2 (red)</li>
-                                <li>- Two ST-LINK LEDs: D4(blue),D4 (red)</li>
-                                <li>- Two push-buttons (user and reset)</li>
+                                <li>- Camera FPC connector</li>
+                                <li>- D1 for 3.3 v power-on</li>
+                                <li>- Two user LEDs</li>
+                                <li>- Three push-buttons (user, reset and boot)</li>
                             </ul>
                             <ul class="col-md-1">
                             </ul>
-                            <ul class="col-md-4">
+                            <!-- <ul class="col-md-4">
                                 <h2>扩展接口:</h2>
                                 <hr>
                                 <li>- 4路UART(LPUART)</li>
@@ -173,27 +171,24 @@
                                 <li>- 超过5路ADC (支持查分输入ADC)</li>
                                 <li>- 超过15路PWM(支持高精度定时器HRTIM)</li>
                                 <li><a href="docs/#/tutorial/pin-description" >- 查看更多的扩展接口</a></li>
-                            </ul>
+                            </ul> -->
                             <ul class="col-md-1">
                             </ul>
                             <ul class="col-md-2">
                                 <h2>驱动支持:</h2>
                                 <hr>
+                                <li>- GPIO </li>
                                 <li>- UART </li>
-                                <li>- SPI </li>
-                                <li>- SDMMC </li>
-                                <li>- CAN </li>
-                                <li>- QSPI </li>
-                                <li>- ADC </li>
-                                <li>- PWM </li>
-                                <li>- DCMI</li>
-                                <li>- SAI</li>
-                                <li>- LTDC</li>
-                                <li>- USB</li>
-                                <li>- ETH</li>
-                                <li>- SDRAM</li>
-                                <li>- HRTIM</li>
                                 <li>- I2C</li>
+                                <li>- SPI </li>
+                                <li>- QSPI </li>
+                                <li>- RTC </li>
+                                <li>- TIMER </li>
+                                <li>- PWM </li>
+                                <li>- SDRAM</li>
+                                <li>- ETH</li>
+                                <li>- WIFI</li>
+                                <li>- LCD</li>
                             </ul>
                         </div>
                     </div>
