--- a/index.html
+++ b/index.html
@@ -127,9 +127,8 @@
         <div class="container ">
             <div class="product-title">
                 <h2>项目介绍</h2>
-                <p> ART-Pi 是 RT-Thread 团队为嵌入式软件工程师、开源创客设计的一款极具扩展功能的 DIY 开源硬件。致力打造一个开源的软硬件平台。</p>
-                <p> github 仓库地址 ： https://github.com/RT-Thread-Studio/sdk-bsp-stm32h750-realthread-artpi</p>
-                <p> gitee  仓库地址 ： https://gitee.com/mirrors/ART-Pi</p>
+                <p> ART-Pi Smart 开发板是RT-Thread联合百问科技出品，用于学习和评估RT-Thread Smart微内核操作系统。</p>
+                <p> gitee  文档仓库地址 ： https://gitee.com/art-pi/smart-website</p>
             </div>
             <div class="row">
                 <div class="col-md-4 productVMlddle">
@@ -199,7 +198,7 @@
     <!-- 产品介绍 END -->
 
 
-    <div class="containermargin team">
+    <!-- <div class="containermargin team">
         <div class="product-title">
             <h2>开源小组</h2>
             <p>这里聚集了一群热爱学习，热爱开源，热爱 DIY 的小伙伴，期待志同道合的你加入我们。</p>
@@ -214,7 +213,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
 
     <!-- Interesting Group START -->
     <div class="bottom containermargin">
