--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
                                 </li> -->
                                 <li><a href="https://club.rt-thread.org/ask/tag/1132.html">交流论坛</a></li>
                                 <!-- <li><a href="docs/#/tutorial/README">技术分享</a></li> -->
-                                <li><a href="docs/#/development/ART-Pi_常见问题解答">常见问题</a></li>
+                                <li><a href="https://art-pi.gitee.io/smart-website/docs/#/user_manual/user_manual?id=常见问题解答">常见问题</a></li>
                                 <!-- <li><a href="docs/#/tutorial/share-guide">参与项目</a></li> -->
-                                <li><a href="https://item.taobao.com/item.htm?id=629477793246">购买链接</a></li>
+                                <li><a href="https://item.taobao.com/item.htm?id=660349566744">购买链接</a></li>
                             </ul>
                         </div>
                         <!-- END .navbar-collapse -->
